increased lintered area

--- a/experiments/lexical_articles.ipynb
+++ b/experiments/lexical_articles.ipynb
@@ -52,9 +52,10 @@
    "source": [
     "import os\n",
     "import sys\n",
-    "from langchain_openai import ChatOpenAI\n",
-    "import openai\n",
+    "\n",
     "import django\n",
+    "import openai\n",
+    "from langchain_openai import ChatOpenAI\n",
     "\n",
     "openai.api_key = os.getenv(\"OPENAI_API_KEY\")\n",
     "# alternatively set LANGCHAIN_API_KEY\n",
@@ -67,7 +68,8 @@
     "    print(\"API key is invalid:\", str(e))\n",
     "\n",
     "openai_llm = ChatOpenAI(\n",
-    "    model=\"gpt-3.5-turbo-0125\", api_key=os.getenv(\"OPENAI_API_KEY\")\n",
+    "    model=\"gpt-3.5-turbo-0125\",\n",
+    "    api_key=os.getenv(\"OPENAI_API_KEY\"),\n",
     ")  # gpt-4-turbo - more correct grammar info\n",
     "\n",
     "# project_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
@@ -116,15 +118,16 @@
     "sys.path.insert(0, os.path.abspath(os.path.join(os.getcwd(), \"..\")))\n",
     "\n",
     "import importlib\n",
-    "from IPython.display import display, HTML\n",
+    "\n",
+    "from IPython.display import HTML, display\n",
+    "\n",
     "import lexiflux.language.llm\n",
     "import lexiflux.language.sentence_extractor_llm\n",
     "\n",
     "importlib.reload(lexiflux.language.llm)\n",
     "importlib.reload(lexiflux.language.sentence_extractor_llm)\n",
-    "from lexiflux.language.llm import Llm\n",
     "from lexiflux.decorators import get_default_user\n",
-    "\n",
+    "from lexiflux.language.llm import Llm\n",
     "\n",
     "# serbian_text = \"Ljubav je najlepša stvar na svetu. Ljubav pokreće sve.\"\n",
     "# word_to_translate = \"Ljubav\"\n",
@@ -137,36 +140,36 @@
     "page_number = 1\n",
     "\n",
     "cases = [\n",
-    "#     {\n",
-    "#         \"text\": \"pokreće sve. [FRAGMENT][HIGHLIGHT]List[/HIGHLIGHT] sa drveta je pao na zemlju.[/FRAGMENT] Na stolu je bio list papira sa važnim beleškama. Ljubav je najlepša\",\n",
-    "#         \"text_language\": \"Serbian\",\n",
-    "#         \"detected_language\": \"Serbian\",\n",
-    "#         \"user_language\": \"Russian\",\n",
-    "#     },\n",
+    "    #     {\n",
+    "    #         \"text\": \"pokreće sve. [FRAGMENT][HIGHLIGHT]List[/HIGHLIGHT] sa drveta je pao na zemlju.[/FRAGMENT] Na stolu je bio list papira sa važnim beleškama. Ljubav je najlepša\",\n",
+    "    #         \"text_language\": \"Serbian\",\n",
+    "    #         \"detected_language\": \"Serbian\",\n",
+    "    #         \"user_language\": \"Russian\",\n",
+    "    #     },\n",
     "    {\n",
     "        \"text\": \"pokreće sve. [FRAGMENT][HIGHLIGHT]List[/HIGHLIGHT] sa drveta je pao na zemlju.[/FRAGMENT] Na stolu je bio list papira sa važnim beleškama. Ljubav je najlepša\",\n",
     "        \"text_language\": \"Serbian\",\n",
     "        \"detected_language\": \"Serbian\",\n",
     "        \"user_language\": \"English\",\n",
     "    },\n",
-    "#     {\n",
-    "#         \"text\": \"[FRAGMENT]Abbati, medico, patronoque [HIGHLIGHT]intima pande[/HIGHLIGHT][/FRAGMENT].\",\n",
-    "#         \"text_language\": \"Serbian\",\n",
-    "#         \"detected_language\": \"Latin\",\n",
-    "#         \"user_language\": \"English\",\n",
-    "#     },\n",
-    "#     {\n",
-    "#         \"text\": \"[FRAGMENT][HIGHLIGHT]Deus[/HIGHLIGHT] ex machina[/FRAGMENT].\",\n",
-    "#         \"text_language\": \"Serbian\",\n",
-    "#         \"detected_language\": \"Latin\",\n",
-    "#         \"user_language\": \"English\",\n",
-    "#     },\n",
-    "#     {\n",
-    "#         \"text\": \"na brzinu sam uradio jutarnju gimnastiku i obukao se. [FRAGMENT]To što [HIGHLIGHT]se dešavalo[/HIGHLIGHT] delovalo mi je krajnje interesantno[/FRAGMENT]. Telefonski fonogram\",\n",
-    "#         \"text_language\": \"Serbian\",\n",
-    "#         \"detected_language\": \"Serbian\",\n",
-    "#         \"user_language\": \"English\",\n",
-    "#     },\n",
+    "    #     {\n",
+    "    #         \"text\": \"[FRAGMENT]Abbati, medico, patronoque [HIGHLIGHT]intima pande[/HIGHLIGHT][/FRAGMENT].\",\n",
+    "    #         \"text_language\": \"Serbian\",\n",
+    "    #         \"detected_language\": \"Latin\",\n",
+    "    #         \"user_language\": \"English\",\n",
+    "    #     },\n",
+    "    #     {\n",
+    "    #         \"text\": \"[FRAGMENT][HIGHLIGHT]Deus[/HIGHLIGHT] ex machina[/FRAGMENT].\",\n",
+    "    #         \"text_language\": \"Serbian\",\n",
+    "    #         \"detected_language\": \"Latin\",\n",
+    "    #         \"user_language\": \"English\",\n",
+    "    #     },\n",
+    "    #     {\n",
+    "    #         \"text\": \"na brzinu sam uradio jutarnju gimnastiku i obukao se. [FRAGMENT]To što [HIGHLIGHT]se dešavalo[/HIGHLIGHT] delovalo mi je krajnje interesantno[/FRAGMENT]. Telefonski fonogram\",\n",
+    "    #         \"text_language\": \"Serbian\",\n",
+    "    #         \"detected_language\": \"Serbian\",\n",
+    "    #         \"user_language\": \"English\",\n",
+    "    #     },\n",
     "]\n",
     "\n",
     "article_name = \"Explain\"\n",
